[tool.poetry]
name = "ymsk-sky-github-io"
version = "0.1.0"
description = ""
authors = ["ymsk-sky <ymsk.sky.95@gmail.com>"]
readme = "README.md"
packages = [{include = "ymsk_sky"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
